--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>HTML Academy: Седона</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
-  <link href="css/style-mini.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
   <!--<link href="css/style.css" rel="stylesheet">-->
 </head>
 <body>
@@ -161,7 +161,7 @@
       </div>
     </footer>
   </div>
-  <script src="js/script-mini.js"></script>
+  <script src="js/script.min.js"></script>
 </body>
 </html>
 
