--- a/inner.html
+++ b/inner.html
@@ -5,8 +5,8 @@
     <title>Гостиницы Седоны</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="css/style.min.css" rel="stylesheet">
-    <!--<link href="css/style.css" rel="stylesheet">-->
+    <!--<link href="css/style.min.css" rel="stylesheet">-->
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <div class="wrapper">
