Убрал outline  добавил shadow

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               <div class="index-amount-label-adult div-input">
                 <label class="label-amount label-adult pic" for="amount-adult">Взрослые:</label>
               </div>
-              <div class=" div-input div-input-adult">
+              <div class=" div-input div-input-adult div-input-shadow">
                 <a class="adult-plus plus">+</a>
                 <input class="input-amount adult" type="text" value="2" id="amount-adult" name="amount-adult" required>
                 <a class="adult-minus minus">-</a>
@@ -131,7 +131,7 @@
               <div class="index-amount-label-child div-input">
                 <label class="label-amount label-child pic" for="amount-children">Дети:</label>
               </div>
-              <div class="div-input div-input-child">
+              <div class="div-input div-input-child div-input-shadow">
                 <a class="adult-plus plus">+</a>
                 <input class="input-amount child" type="text" value="0" id="amount-children" name="amount-children">
                 <a class="adult-minus minus">-</a>
@@ -164,10 +164,3 @@
   <script src="js/script.min.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
