На финальную проверку

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
           <ul class="main-navigation-right">
             <li class="nav-li-right">
-              <a href="#">Карта штата</a>
+              <a class="nav-li-right-first" href="#">Карта штата</a>
             </li>
             <li class="nav-li-right">
               <a href="inner.html">Гостиницы</a>
@@ -44,30 +44,30 @@
       </div>
       <div class="index-features">
         <div class="index-tagline">
-          Седона - небольшой городок в Аризоне,
+          Седона — небольшой городок в Аризоне,
           <br>
-          заслуживающий большего Аризоне!
+          заслуживающий большего!
         </div>
         <div class="index-reasons">
-          Рассмотрим 5 причин, по которым Седона лучше, чем Гранд Каньон!
+          Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!
         </div>
       </div>
       <section class="index-city-info">
         <div class="info-main clearfix">
           <div class="main-text">
             <div class="main-title">Настоящий городок</div>
-            <div class="main-number">- №1 -</div>
-            <div class="main-features">Седона - не аттракцион для туристов, там течет своя жизнь</div>
+            <div class="main-number">— №1 —</div>
+            <div class="main-features">Седона — не аттракцион для туристов, там течет своя жизнь</div>
           </div>
         </div>
         <div class="info-needs clearfix">
           <div class="column info-housing">
             <div class="info-title house">Жилье</div>
-            <div class="info-text">Рекоммендуем пожить в настоящем мотеле, как в кино!</div>
+            <div class="info-text house-text">Рекомендуем пожить в настоящем мотеле, все как в кино!</div>
           </div>
           <div class="column info-food">
             <div class="info-title food">ЕДА</div>
-            <div class="info-text">Всегда заказывайте фирменный чизбургер, вы не разочаруетесь!</div>
+            <div class="info-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</div>
           </div>
           <div class="column info-souvenirs">
             <div class="info-title souvenirs">Сувениры</div>
@@ -78,26 +78,26 @@
       <section class="index-city-attractions">
         <div class="attractions-main clearfix">
           <div class="attractions-main-text">
-            <div class="main-title">Там есть мост дьявола</div>
-            <div class="main-number">- №2 -</div>
-            <div class="main-features">Да, по нему можно пройти, если конечно осмелитесь!</div>
+            <div class="main-title main-title-attractions">Там есть мост дьявола</div>
+            <div class="main-number">— №2 —</div>
+            <div class="main-features main-features-attractions">Да, по нему можно пройти, если конечно вы осмелитесь!</div>
           </div>
         </div>
         <div class="attractions-logistics clearfix">
           <div class="column-2 attractions-square">
-            <div class="main-title">Небольшая площадь</div>
-            <div class="main-number">- №3 -</div>
-            <div class="main-features">Все достопримечательности находятся очень близко!</div>
+            <div class="main-title main-title-logistics">Небольшая площадь</div>
+            <div class="main-number">— №3 —</div>
+            <div class="main-features">Все достопримечательности находятся очень близко</div>
           </div>
           <div class="column-2 attractions-road">
-            <div class="main-title">Красивая дорога</div>
-            <div class="main-number">- №4 -</div>
-            <div class="main-features">Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
+            <div class="main-title main-title-logistics">Красивая дорога</div>
+            <div class="main-number">— №4 —</div>
+            <div class="main-features main-features-logistics">Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
           </div>
           <div class="column-2 attractions-tourists">
-            <div class="main-title">Мало туристов</div>
-            <div class="main-number">- №5 -</div>
-            <div class="main-features">Большинство идет в Гранд Каньон и толпится там</div>
+            <div class="main-title main-title-logistics">Мало туристов</div>
+            <div class="main-number">— №5 —</div>
+            <div class="main-features">Большинство едет в Гранд Каньон и толпится там</div>
           </div>
         </div>
       </section>
@@ -124,17 +124,17 @@
                 <label class="label-amount label-adult pic" for="amount-adult">Взрослые:</label>
               </div>
               <div class=" div-input div-input-adult div-input-shadow">
-                <a class="adult-plus plus">+</a>
+                <a class="adult-plus minus">-</a>
                 <input class="input-amount adult" type="text" value="2" id="amount-adult" name="amount-adult" required>
-                <a class="adult-minus minus">-</a>
+                <a class="adult-minus plus">+</a>
               </div>
               <div class="index-amount-label-child div-input">
                 <label class="label-amount label-child pic" for="amount-children">Дети:</label>
               </div>
               <div class="div-input div-input-child div-input-shadow">
-                <a class="adult-plus plus">+</a>
+                <a class="adult-plus minus">-</a>
                 <input class="input-amount child" type="text" value="0" id="amount-children" name="amount-children">
-                <a class="adult-minus minus">-</a>
+                <a class="adult-minus plus">+</a>
               </div>
             </div>
             <button class="modal-btn">Найти</button>
