--- a/inner.html
+++ b/inner.html
@@ -45,7 +45,7 @@
                 <label class="inner-checkbox" for="checkbox-pool">
                   <input id="checkbox-pool" type="checkbox" checked>
                   <span class="checkbox-indicator"></span>
-                  Бассейна
+                  Бассейн
                 </label>
               </li>
               <li>
@@ -109,9 +109,8 @@
           </div>
         </form>
       </div>
-      <div class="container-inner">
       <div class="search-results clearfix">
-        <div class="number-items">Найдено:3</div>
+        <div class="number-items">Найдено: 3</div>
         <div class="inner-sort">Сортировка:</div>
         <div class="inner-types">
           <a class="types-btn active">По цене</a>
@@ -151,17 +150,17 @@
           <div class="hotel-img">
             <img src="img/inner-desert.jpg" width="135" height="90" alt="DESERT QUAIL INN">
           </div>
-          <div class="hotel-info">
+          <div class="hotel-info hotel-info-2">
             <div><a href="#" class="hotel-name">Desert quail inn</a></div>
             <div class="hotel-info-left">
               <div class="hotel-type-details">
-                <div class="hotel-type">Мотель</div>
+                <div class="hotel-type hotel-type-2">Мотель</div>
                 <a class="btn-details">Подробнее</a>
               </div>
             </div>
             <div class="hotel-info-right">
               <div class="hotel-price-order">
-                <div class="hotel-price">от 3000 р.</div>
+                <div class="hotel-price hotel-price-2">от 3000 р.</div>
                 <a class="btn-order">Забронировать</a>
               </div>
             </div>
@@ -172,19 +171,19 @@
         </div>
         <div class="hotel clearfix hotel-last">
           <div class="hotel-img">
-            <img src="img/inner-poco-diablo.jpg" width="135" height="90" alt="VILLAS AT POCCO DIABLO">
+            <img src="img/inner-poco-diablo.jpg" width="135" height="90" alt="VILLAS AT POCO DIABLO">
           </div>
-          <div class="hotel-info">
-            <div><a href="#" class="hotel-name">Villas at pocco diablo</a></div>
+          <div class="hotel-info hotel-info-3">
+            <div><a href="#" class="hotel-name">Villas at poco diablo</a></div>
             <div class="hotel-info-left">
               <div class="hotel-type-details">
-                <div class="hotel-type">Апартаменты</div>
+                <div class="hotel-type hotel-type-3">Апартаменты</div>
                 <a class="btn-details">Подробнее</a>
               </div>
             </div>
             <div class="hotel-info-right">
               <div class="hotel-price-order">
-                <div class="hotel-price">от 2000 р.</div>
+                <div class="hotel-price hotel-price-3">от 2000 р.</div>
                 <a class="btn-order">Забронировать</a>
               </div>
             </div>
@@ -193,7 +192,6 @@
             <div class="hotel-rating-number two-stars">Рейтинг: 9.2</div>
           </div>
         </div>
-      </div>
       </div>
     </main>
     <footer class="footer">
